objects/smartlists__Smart_List_Filter__mdt.object
<CustomObject>
    <fields>
        <fullName>smartlists__Custom_Permission__c</fullName>
        <inlineHelpText>API name of the custom permission required for viewing this filter. If blank, all users can view this filter</inlineHelpText>
        <label>Custom Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Default_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Filter_Label__c</fullName>
        <inlineHelpText>Enter a text value or $Label­.CustomLabelName</inlineHelpText>
        <label>Filter Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__SOQL_Filter__c</fullName>
        <inlineHelpText>SOQL filter used for querying the records. Example: Status = &apos;Open&apos;.
Used for SOQL type only</inlineHelpText>
        <label>SOQL Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Smart_List_Definition__c</fullName>
        <label>Smart List Definition</label>
        <referenceTo>smartlists__Smart_List_Definition__mdt</referenceTo>
        <relationshipLabel>Smart List Filters</relationshipLabel>
        <relationshipName>Smart_List_Filters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Smart List Filter</label>
    <pluralLabel>Smart List Filters</pluralLabel>
    <validationRules>
        <fullName>smartlists__Check_SOQL_Filter</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos;) &amp;&amp; ISBLANK(smartlists__SOQL_Filter__c)</errorConditionFormula>
        <errorDisplayField>smartlists__SOQL_Filter__c</errorDisplayField>
        <errorMessage>SOQL Filter is required for SOQL and Files list</errorMessage>
    </validationRules>
</CustomObject>